--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,10 +8,60 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         <TextView
-                android:text="Current Goal"
+                android:text="@string/current_goal"
+                android:textSize="34sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/textView_goal"
-                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="244dp" android:layout_marginStart="156dp"/>
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="108dp" app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="188dp"/>
+        <ListView
+                android:layout_width="358dp"
+                android:layout_height="152dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
+                android:id="@+id/listView_transaction" app:layout_constraintTop_toBottomOf="@+id/textView_viewDate"
+                android:layout_marginTop="8dp"/>
+        <TextView
+                android:text="9/7/2024"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/textView_viewDate"
+                tools:layout_editor_absoluteY="473dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
+                android:textSize="20sp"/>
+        <TextView
+                android:text="$100,000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/textView_goalNumber"
+                app:layout_constraintTop_toBottomOf="@+id/textView_goal"
+                android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="136dp" android:textSize="32sp"/>
+        <TextView
+                android:text="Monthly Balance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/textView_monthlyBalance"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView_goalNumber" android:layout_marginTop="32dp"
+                android:textSize="20sp"/>
+        <TextView
+                android:text="$700"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/textView_monthlyBalanceNumber"
+                app:layout_constraintStart_toEndOf="@+id/textView_monthlyBalance" android:layout_marginStart="148dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView_goalNumber" android:layout_marginTop="36dp"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.26"/>
+        <TextView
+                android:text="Income"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/textView_monthlyIncome"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView_monthlyBalance" android:layout_marginTop="24dp"/>
+        <TextView
+                android:text="1,200"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/textView_monthlyIncomeNumber"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView_monthlyBalanceNumber" android:layout_marginTop="28dp"
+                android:layout_marginEnd="24dp" app:layout_constraintStart_toEndOf="@+id/textView_monthlyIncome"
+                app:layout_constraintHorizontal_bias="0.952"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
