--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,14 +13,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/textView_goal"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="108dp" app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="188dp"/>
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="188dp" app:layout_constraintEnd_toEndOf="parent"/>
         <ListView
                 android:layout_width="358dp"
                 android:layout_height="152dp"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
+                app:layout_constraintStart_toStartOf="parent"
                 android:id="@+id/listView_transaction" app:layout_constraintTop_toBottomOf="@+id/textView_viewDate"
-                android:layout_marginTop="8dp"/>
+                android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"/>
         <TextView
                 android:text="9/7/2024"
                 android:layout_width="wrap_content"
@@ -34,7 +34,7 @@
                 android:layout_height="wrap_content" android:id="@+id/textView_goalNumber"
                 app:layout_constraintTop_toBottomOf="@+id/textView_goal"
                 android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="136dp" android:textSize="32sp"/>
+                android:textSize="32sp" app:layout_constraintEnd_toEndOf="parent"/>
         <TextView
                 android:text="Monthly Balance"
                 android:layout_width="wrap_content"
@@ -53,15 +53,46 @@
                 android:text="Income"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/textView_monthlyIncome"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView_monthlyBalance" android:layout_marginTop="24dp"/>
+                app:layout_constraintTop_toBottomOf="@+id/textView_monthlyBalance" android:layout_marginTop="24dp"
+                app:layout_constraintStart_toStartOf="@+id/textView_monthlyBalance"/>
         <TextView
                 android:text="1,200"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/textView_monthlyIncomeNumber"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView_monthlyBalanceNumber" android:layout_marginTop="28dp"
-                android:layout_marginEnd="24dp" app:layout_constraintStart_toEndOf="@+id/textView_monthlyIncome"
-                app:layout_constraintHorizontal_bias="0.952"/>
+                app:layout_constraintStart_toEndOf="@+id/textView_monthlyIncome"
+                app:layout_constraintEnd_toEndOf="@+id/textView_monthlyBalanceNumber"
+                app:layout_constraintHorizontal_bias="1.0"/>
+        <TextView
+                android:text="Expenses"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/textView_Expenses"
+                app:layout_constraintTop_toBottomOf="@+id/textView_monthlyIncome" android:layout_marginTop="16dp"
+                app:layout_constraintStart_toStartOf="@+id/textView_monthlyIncome"/>
+        <TextView
+                android:text="500"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/textView2"
+                app:layout_constraintTop_toBottomOf="@+id/textView_monthlyIncomeNumber" android:layout_marginTop="16dp"
+                app:layout_constraintStart_toEndOf="@+id/textView_Expenses"
+                app:layout_constraintEnd_toEndOf="@+id/textView_monthlyIncomeNumber"
+                app:layout_constraintHorizontal_bias="1.0"/>
+        <TextView
+                android:text="TextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/textView3" tools:layout_editor_absoluteY="481dp"
+                app:layout_constraintStart_toEndOf="@+id/textView_viewDate" app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.85"/>
+        <ImageView
+                android:src="@drawable/rocket_icon"
+                android:layout_width="100dp"
+                android:layout_height="98dp" android:id="@+id/imageView"
+                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="32dp" android:layout_marginStart="56dp" android:rotation="90"/>
+        <ImageView
+                android:src="@drawable/moon_icon"
+                android:layout_width="284dp"
+                android:layout_height="394dp" android:id="@+id/imageView2" tools:layout_editor_absoluteY="-78dp"
+                tools:layout_editor_absoluteX="242dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
