--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,12 +3,14 @@
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
+             android:background="@drawable/home_background"
              tools:context=".HomeFragment">
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         <TextView
                 android:text="@string/current_goal"
+                android:textColor="@color/white"
                 android:textSize="34sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/textView_goal"
@@ -23,6 +25,7 @@
                 android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"/>
         <TextView
                 android:text="9/7/2024"
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/textView_viewDate"
                 tools:layout_editor_absoluteY="473dp"
@@ -30,6 +33,7 @@
                 android:textSize="20sp"/>
         <TextView
                 android:text="$100,000"
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/textView_goalNumber"
                 app:layout_constraintTop_toBottomOf="@+id/textView_goal"
@@ -37,6 +41,7 @@
                 android:textSize="32sp" app:layout_constraintEnd_toEndOf="parent"/>
         <TextView
                 android:text="Monthly Balance"
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/textView_monthlyBalance"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
@@ -44,6 +49,7 @@
                 android:textSize="20sp"/>
         <TextView
                 android:text="$700"
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/textView_monthlyBalanceNumber"
                 app:layout_constraintStart_toEndOf="@+id/textView_monthlyBalance" android:layout_marginStart="148dp"
@@ -51,12 +57,14 @@
                 app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.26"/>
         <TextView
                 android:text="Income"
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/textView_monthlyIncome"
                 app:layout_constraintTop_toBottomOf="@+id/textView_monthlyBalance" android:layout_marginTop="24dp"
                 app:layout_constraintStart_toStartOf="@+id/textView_monthlyBalance"/>
         <TextView
                 android:text="1,200"
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/textView_monthlyIncomeNumber"
                 app:layout_constraintTop_toBottomOf="@+id/textView_monthlyBalanceNumber" android:layout_marginTop="28dp"
@@ -65,12 +73,14 @@
                 app:layout_constraintHorizontal_bias="1.0"/>
         <TextView
                 android:text="Expenses"
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/textView_Expenses"
                 app:layout_constraintTop_toBottomOf="@+id/textView_monthlyIncome" android:layout_marginTop="16dp"
                 app:layout_constraintStart_toStartOf="@+id/textView_monthlyIncome"/>
         <TextView
                 android:text="500"
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/textView2"
                 app:layout_constraintTop_toBottomOf="@+id/textView_monthlyIncomeNumber" android:layout_marginTop="16dp"
@@ -79,6 +89,7 @@
                 app:layout_constraintHorizontal_bias="1.0"/>
         <TextView
                 android:text="TextView"
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/textView3" tools:layout_editor_absoluteY="481dp"
                 app:layout_constraintStart_toEndOf="@+id/textView_viewDate" app:layout_constraintEnd_toEndOf="parent"
@@ -92,7 +103,9 @@
         <ImageView
                 android:src="@drawable/moon_icon"
                 android:layout_width="284dp"
-                android:layout_height="394dp" android:id="@+id/imageView2" tools:layout_editor_absoluteY="-78dp"
-                tools:layout_editor_absoluteX="242dp"/>
+                android:layout_height="394dp" android:id="@+id/imageView2"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="252dp" app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="424dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
