--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -95,17 +95,16 @@
                 app:layout_constraintStart_toEndOf="@+id/textView_viewDate" app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.85"/>
         <ImageView
-                android:src="@drawable/rocket_icon"
-                android:layout_width="100dp"
-                android:layout_height="98dp" android:id="@+id/imageView"
-                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="32dp" android:layout_marginStart="56dp" android:rotation="90"/>
+                android:src="@drawable/rocket_fly_icon"
+                android:layout_width="42dp"
+                android:layout_height="100dp" android:id="@+id/imageView"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="104dp"
+                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="44dp" android:rotation="90"/>
         <ImageView
                 android:src="@drawable/moon_icon"
-                android:layout_width="284dp"
-                android:layout_height="394dp" android:id="@+id/imageView2"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="252dp" app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="424dp"/>
+                android:layout_width="208dp"
+                android:layout_height="261dp" android:id="@+id/imageView2"
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginStart="300dp" android:layout_marginBottom="496dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
