Create a relative layout and drawable for home bar

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
 
     <color name="bg_dark">#221734</color>
     <color name="bg_light">#663B8B</color>
+
+    <color name="txt_lightPink">#FA8D93</color>
+    <color name="txt_darkpink">#FC489C</color>
 </resources>
