--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,112 +16,125 @@
                 app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginStart="300dp" android:layout_marginBottom="516dp"/>
         <ImageView
-                android:src="@drawable/backdrop"
-                android:layout_width="411dp"
-                android:layout_height="595dp" android:id="@+id/imageView4"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" tools:layout_editor_absoluteY="136dp"/>
-        <RelativeLayout android:layout_width="match_parent" android:layout_height="50dp"
-                        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent" android:id="@+id/layout_homeBar">
-            <ImageView
-                    android:src="@drawable/home_bar"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" android:id="@+id/imageView_navBar_bg"
-                    android:layout_alignParentEnd="true" android:layout_marginEnd="0dp"/>
-        </RelativeLayout>
-        <TextView
-                android:text="@string/current_goal"
-                android:textColor="@color/black"
-                android:textSize="34sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/textView_goal"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@+id/imageView4"
-                android:layout_marginTop="32dp"/>
-        <ListView
-                android:layout_width="358dp"
-                android:layout_height="152dp"
-                app:layout_constraintStart_toStartOf="parent"
-                android:id="@+id/listView_transaction" app:layout_constraintTop_toBottomOf="@+id/textView_viewDate"
-                android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"/>
-        <TextView
-                android:text="9/7/2024"
-                android:textColor="@color/black"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/textView_viewDate"
-                tools:layout_editor_absoluteY="473dp"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
-                android:textSize="20sp"/>
-        <TextView
-                android:text="$100,000"
-                android:textColor="@color/black"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/textView_goalNumber"
-                app:layout_constraintTop_toBottomOf="@+id/textView_goal"
-                android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
-                android:textSize="32sp" app:layout_constraintEnd_toEndOf="parent"/>
-        <TextView
-                android:text="Monthly Balance"
-                android:textColor="@color/black"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/textView_monthlyBalance"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView_goalNumber" android:layout_marginTop="32dp"
-                android:textSize="20sp"/>
-        <TextView
-                android:text="$700"
-                android:textColor="@color/black"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/textView_monthlyBalanceNumber"
-                app:layout_constraintStart_toEndOf="@+id/textView_monthlyBalance" android:layout_marginStart="148dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView_goalNumber" android:layout_marginTop="36dp"
-                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.26"/>
-        <TextView
-                android:text="Income"
-                android:textColor="@color/black"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/textView_monthlyIncome"
-                app:layout_constraintTop_toBottomOf="@+id/textView_monthlyBalance" android:layout_marginTop="24dp"
-                app:layout_constraintStart_toStartOf="@+id/textView_monthlyBalance"/>
-        <TextView
-                android:text="1,200"
-                android:textColor="@color/black"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/textView_monthlyIncomeNumber"
-                app:layout_constraintTop_toBottomOf="@+id/textView_monthlyBalanceNumber" android:layout_marginTop="28dp"
-                app:layout_constraintStart_toEndOf="@+id/textView_monthlyIncome"
-                app:layout_constraintEnd_toEndOf="@+id/textView_monthlyBalanceNumber"
-                app:layout_constraintHorizontal_bias="1.0"/>
-        <TextView
-                android:text="Expenses"
-                android:textColor="@color/black"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/textView_Expenses"
-                app:layout_constraintTop_toBottomOf="@+id/textView_monthlyIncome" android:layout_marginTop="16dp"
-                app:layout_constraintStart_toStartOf="@+id/textView_monthlyIncome"/>
-        <TextView
-                android:text="500"
-                android:textColor="@color/black"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/textView2"
-                app:layout_constraintTop_toBottomOf="@+id/textView_monthlyIncomeNumber" android:layout_marginTop="16dp"
-                app:layout_constraintStart_toEndOf="@+id/textView_Expenses"
-                app:layout_constraintEnd_toEndOf="@+id/textView_monthlyIncomeNumber"
-                app:layout_constraintHorizontal_bias="1.0"/>
-        <TextView
-                android:text="TextView"
-                android:textColor="@color/black"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/textView3" tools:layout_editor_absoluteY="481dp"
-                app:layout_constraintStart_toEndOf="@+id/textView_viewDate" app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.85"/>
-        <ImageView
                 android:src="@drawable/rocket_fly_icon"
                 android:layout_width="42dp"
                 android:layout_height="100dp" android:id="@+id/imageView"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="104dp"
                 app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="44dp" android:rotation="90"/>
+
+        <!--Main backdrop-->
+        <androidx.cardview.widget.CardView
+                android:layout_width="412dp"
+                android:layout_height="575dp"
+                app:cardCornerRadius="30dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:cardBackgroundColor="#e3e3e3" android:id="@+id/cardView_mainBackdrop">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                <TextView
+                        android:text="@string/current_goal"
+                        android:textColor="@color/black"
+                        android:textSize="34sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textView_goal"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
+                        android:layout_marginStart="116dp"/>
+                <TextView
+                        android:text="$100,000"
+                        android:textColor="@color/black"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" android:id="@+id/textView_goalNumber"
+                        app:layout_constraintTop_toBottomOf="@+id/textView_goal"
+                        android:layout_marginTop="12dp" app:layout_constraintStart_toStartOf="parent"
+                        android:textSize="32sp" android:layout_marginStart="140dp"/>
+                <androidx.cardview.widget.CardView
+                        android:layout_width="376dp"
+                        android:layout_height="217dp"
+                        app:cardCornerRadius="30dp"
+                        android:id="@+id/cardView_mothlyInfoBackdrop"
+                        app:layout_constraintTop_toBottomOf="@+id/textView_goalNumber"
+                        android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent">
+                    <TextView
+                            android:text="Monthly Balance"
+                            android:textColor="@color/black"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" android:id="@+id/textView_monthlyBalance"
+                            android:textSize="20sp"
+                            android:layout_marginTop="44dp"
+                            android:layout_marginStart="16dp"/>
+                    <TextView
+                            android:text="$700"
+                            android:textColor="@color/black"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" android:id="@+id/textView_monthlyBalanceNumber"
+                            android:layout_marginTop="52dp"
+                    />
+                    <TextView
+                            android:text="Income"
+                            android:textColor="@color/black"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" android:id="@+id/textView_monthlyIncome"
+                            android:layout_marginTop="32dp"/>
+                    <TextView
+                            android:text="1,200"
+                            android:textColor="@color/black"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" android:id="@+id/textView_monthlyIncomeNumber"
+                            android:layout_marginTop="32dp"/>
+                    <TextView
+                            android:text="Expenses"
+                            android:textColor="@color/black"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" android:id="@+id/textView_Expenses"
+                            android:layout_marginTop="36dp"/>
+                    <TextView
+                            android:text="500"
+                            android:textColor="@color/black"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" android:id="@+id/textView2"
+                            android:layout_marginTop="36dp"
+                    />
+                </androidx.cardview.widget.CardView>
+                <ListView
+                        android:layout_width="358dp"
+                        android:layout_height="152dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:id="@+id/listView_transaction"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        tools:layout_editor_absoluteY="407dp"/>
+                <TextView
+                        android:text="9/7/2024"
+                        android:textColor="@color/black"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" android:id="@+id/textView_viewDate"
+                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
+                        android:textSize="20sp"
+                        tools:layout_editor_absoluteY="367dp"/>
+                <TextView
+                        android:text="TextView"
+                        android:textColor="@color/black"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" android:id="@+id/textView3"
+                        tools:layout_editor_absoluteY="375dp"
+                        app:layout_constraintStart_toEndOf="@+id/textView_viewDate"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.886"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+
+
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
