--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,26 +16,29 @@
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="104dp"
                 app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="44dp" android:rotation="90"/>
 
-        <!--main backdrop -->
         <ImageView
                 android:src="@drawable/moon_icon"
                 android:layout_width="174dp"
-                android:layout_height="215dp" android:id="@+id/imageView2"
+                android:layout_height="215dp"
+                android:id="@+id/imageView2"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="540dp" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginBottom="540dp"
+                app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="304dp"/>
+
+        <!--main backdrop -->
         <androidx.cardview.widget.CardView
                 android:layout_width="412dp"
                 android:layout_height="575dp"
                 app:cardCornerRadius="30dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:cardBackgroundColor="#e3e3e3"
                 android:id="@+id/cardView_mainBackdrop"
-                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="156dp">
+                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="156dp"
+                app:layout_constraintEnd_toEndOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="592dp"
+                    android:layout_height="match_parent"
                     android:id="@+id/constraintLayout">
 
                 <TextView
@@ -48,21 +51,21 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                         app:layout_constraintEnd_toEndOf="parent"/>
+
+                <!--monthly info backdrop-->
                 <TextView
                         android:text="$100,000"
                         android:textColor="@color/black"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" android:id="@+id/textView_goalNumber"
                         app:layout_constraintTop_toBottomOf="@+id/textView_goal"
-                        android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
+                        android:layout_marginTop="12dp" app:layout_constraintStart_toStartOf="parent"
                         android:textSize="32sp" app:layout_constraintEnd_toEndOf="parent"/>
-
-                <!--monthly info backdrop-->
                 <androidx.cardview.widget.CardView
                         android:layout_width="376dp"
                         android:layout_height="180dp"
                         app:cardCornerRadius="30dp"
-                        android:elevation="20dp"
+                        app:cardElevation="5dp"
                         android:id="@+id/cardView_mothlyInfoBackdrop"
                         app:layout_constraintTop_toBottomOf="@+id/textView_goalNumber"
                         android:layout_marginTop="24dp"
@@ -132,40 +135,63 @@
                 <!--daily info backdrop-->
                 <androidx.cardview.widget.CardView
                         android:layout_width="376dp"
-                        android:layout_height="180dp"
+                        android:layout_height="150dp"
                         app:cardCornerRadius="30dp"
+                        app:cardElevation="5dp"
                         app:layout_constraintTop_toBottomOf="@+id/cardView_mothlyInfoBackdrop"
-                        android:layout_marginTop="36dp"
-                        app:layout_constraintStart_toStartOf="@+id/cardView_mothlyInfoBackdrop"/>
-                <!--                <ListView-->
-                <!--                        android:layout_width="367dp"-->
-                <!--                        android:layout_height="98dp"-->
-                <!--                        app:layout_constraintStart_toStartOf="parent"-->
-                <!--                        android:id="@+id/listView_transaction"-->
-                <!--                        app:layout_constraintEnd_toEndOf="parent"-->
-                <!--                        tools:layout_editor_absoluteY="418dp"/>-->
-                <!--                <TextView-->
-                <!--                        android:text="9/7/2024"-->
-                <!--                        android:textColor="@color/black"-->
-                <!--                        android:layout_width="wrap_content"-->
-                <!--                        android:layout_height="wrap_content" android:id="@+id/textView_viewDate"-->
-                <!--                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"-->
-                <!--                        android:textSize="20sp"-->
-                <!--                        tools:layout_editor_absoluteY="382dp"/>-->
-                <!--                <TextView-->
-                <!--                        android:text="TextView"-->
-                <!--                        android:textColor="@color/black"-->
-                <!--                        android:layout_width="wrap_content"-->
-                <!--                        android:layout_height="wrap_content" android:id="@+id/textView3"-->
-                <!--                        tools:layout_editor_absoluteY="390dp"-->
-                <!--                        app:layout_constraintStart_toEndOf="@+id/textView_viewDate"-->
-                <!--                        app:layout_constraintEnd_toEndOf="parent"-->
-                <!--                        app:layout_constraintHorizontal_bias="0.884"/>-->
+                        android:layout_marginTop="34dp"
+                        app:layout_constraintStart_toStartOf="@+id/cardView_mothlyInfoBackdrop"
+                        android:layout_marginEnd="18dp" app:layout_constraintEnd_toEndOf="parent"
+                        android:id="@+id/cardView_dailyInfoBackdrop">
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                        <ListView
+                                android:layout_width="367dp"
+                                android:layout_height="98dp"
+                                android:id="@+id/listView_transaction"
+                                tools:layout_editor_absoluteY="57dp" tools:layout_editor_absoluteX="5dp"/>
+                        <TextView
+                                android:text="$-500"
+                                android:textColor="@color/black"
+                                android:textSize="18sp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content" android:id="@+id/textView3"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                android:layout_marginEnd="40dp" app:layout_constraintTop_toTopOf="parent"
+                                android:layout_marginTop="16dp"
+                                app:layout_constraintStart_toEndOf="@+id/textView_viewDate"
+                                app:layout_constraintHorizontal_bias="1.0"/>
+                        <TextView
+                                android:text="9/7/2024"
+                                android:textColor="@color/black"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content" android:id="@+id/textView_viewDate"
+                                android:textSize="18sp"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
+                                android:layout_marginStart="24dp"/>
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.cardview.widget.CardView>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
-        <!--Main backdrop-->
+<!--        <androidx.cardview.widget.CardView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="50dp"-->
+<!--                app:cardBackgroundColor="@color/navigationBar_grey"-->
+<!--                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintStart_toStartOf="parent">-->
+<!--            <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent">-->
+
+<!--            </androidx.constraintlayout.widget.ConstraintLayout>-->
+<!--        </androidx.cardview.widget.CardView>-->
+
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
