Changed navigation bar background color

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
                 android:id="@+id/bottomNavigationView"
                 android:layout_width="match_parent"
                 android:layout_height="65dp"
+                app:backgroundTint="@color/navigationBar_grey"
                 app:itemIconTint="@color/navigationIcon_pink"
                 app:itemIconSize="34dp"
                 app:itemPaddingTop="10dp"
