--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="txt_darkpink">#FC489C</color>
 
     <color name="trnasacBnt_orange">#F9A690</color>
-    <color name="navigationBar_grey">#ADADAD</color>
+    <color name="navigationBar_grey">#D9D9D9</color>
     <color name="navigationIcon_pink">#C647BF</color>
 
 </resources>
