--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,6 +12,27 @@
             android:layout_height="match_parent">
 
         <ImageView
+                android:src="@drawable/star"
+                android:alpha="0.7"
+                android:layout_width="15dp"
+                android:layout_height="18dp" android:id="@+id/star1_home"
+                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="16dp" android:layout_marginStart="228dp"/>
+        <ImageView
+                android:src="@drawable/star"
+                android:alpha="0.7"
+                android:layout_width="15dp"
+                android:layout_height="18dp" android:id="@+id/star2_home"
+                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="52dp" android:layout_marginStart="24dp"/>
+        <ImageView
+                android:src="@drawable/star"
+                android:alpha="0.7"
+                android:layout_width="15dp"
+                android:layout_height="18dp" android:id="@+id/star3_home"
+                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="116dp" android:layout_marginStart="56dp"/>
+        <ImageView
                 android:src="@drawable/moon_icon"
                 android:layout_width="174dp"
                 android:layout_height="215dp"
@@ -32,6 +53,17 @@
                 android:rotation="90"/>
 
         <!--main backdrop -->
+        <ProgressBar
+                style="@android:style/Widget.ProgressBar.Horizontal"
+                android:layout_width="350dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/current_goal_bar"
+                android:alpha="1"
+                android:progress="0"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="120dp" android:maxWidth="46dip"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.504"/>
         <androidx.cardview.widget.CardView
                 android:layout_width="412dp"
                 android:layout_height="900dp"
@@ -48,6 +80,13 @@
                     android:layout_height="match_parent"
                     android:id="@+id/constraintLayout">
 
+                <ImageView
+                        android:src="@drawable/baseline_calendar_month_24"
+                        android:layout_width="40dp"
+                        android:layout_height="39dp" android:id="@+id/calendar_home"
+                        app:layout_constraintEnd_toEndOf="@+id/cardView_mothlyInfoBackdrop"
+                        app:layout_constraintTop_toBottomOf="@+id/cardView_mothlyInfoBackdrop"
+                        android:layout_marginTop="2dp"/>
                 <TextView
                         android:text="@string/current_goal"
                         android:textColor="@color/black"
@@ -66,7 +105,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" android:id="@+id/textView_goalNumber"
                         app:layout_constraintTop_toBottomOf="@+id/textView_goal"
-                        android:layout_marginTop="12dp" app:layout_constraintStart_toStartOf="parent"
+                        android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
                         android:textSize="32sp" app:layout_constraintEnd_toEndOf="parent"/>
                 <androidx.cardview.widget.CardView
                         android:layout_width="376dp"
@@ -75,7 +114,7 @@
                         app:cardElevation="5dp"
                         android:id="@+id/cardView_mothlyInfoBackdrop"
                         app:layout_constraintTop_toBottomOf="@+id/textView_goalNumber"
-                        android:layout_marginTop="24dp"
+                        android:layout_marginTop="20dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent">
                     <androidx.constraintlayout.widget.ConstraintLayout
@@ -146,7 +185,7 @@
                         app:cardCornerRadius="30dp"
                         app:cardElevation="5dp"
                         app:layout_constraintTop_toBottomOf="@+id/cardView_mothlyInfoBackdrop"
-                        android:layout_marginTop="34dp"
+                        android:layout_marginTop="44dp"
                         app:layout_constraintStart_toStartOf="@+id/cardView_mothlyInfoBackdrop"
                         android:layout_marginEnd="18dp" app:layout_constraintEnd_toEndOf="parent"
                         android:id="@+id/cardView_dailyInfoBackdrop">
@@ -188,19 +227,6 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
-
-        <!--        <androidx.cardview.widget.CardView-->
-        <!--                android:layout_width="match_parent"-->
-        <!--                android:layout_height="50dp"-->
-        <!--                app:cardBackgroundColor="@color/navigationBar_grey"-->
-        <!--                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"-->
-        <!--                app:layout_constraintStart_toStartOf="parent">-->
-        <!--            <androidx.constraintlayout.widget.ConstraintLayout-->
-        <!--                    android:layout_width="match_parent"-->
-        <!--                    android:layout_height="match_parent">-->
-
-        <!--            </androidx.constraintlayout.widget.ConstraintLayout>-->
-        <!--        </androidx.cardview.widget.CardView>-->
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
