--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="txt_lightPink">#FA8D93</color>
     <color name="txt_darkpink">#FC489C</color>
 
-    <color name="backDropMain_darkGrey">#E9E8E8</color>
+    <color name="backDropMain_darkGrey">#F6F6F6</color>
 
     <color name="trnasacBnt_orange">#F9A690</color>
     <color name="navigationBar_grey">#D9D9D9</color>
