--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,13 +3,13 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/nav_graph"
-            app:startDestination="@id/FirstFragment">
+            app:startDestination="@id/HomeFragment">
 
     <fragment
-            android:id="@+id/FirstFragment"
-            android:name="com.example.galacticore.FirstFragment"
-            android:label="@string/first_fragment_label"
-            tools:layout="@layout/fragment_first">
+            android:id="@+id/HomeFragment"
+            android:name="com.example.galacticore.HomeFragment"
+            android:label="@string/Home_fragment_label"
+            tools:layout="@layout/fragment_home">
 
         <action
                 android:id="@+id/action_FirstFragment_to_addTransactionFragment"
@@ -23,7 +23,7 @@
             tools:layout="@layout/fragment_add_transaction">
 
         <action
-                android:id="@+id/action_addTransactionFragment_to_FirstFragment"
-                app:destination="@id/FirstFragment" />
+                android:id="@+id/action_addTransactionFragment_to_HomeFragment"
+                app:destination="@id/HomeFragment" />
     </fragment>
 </navigation>
