--- a/app/src/main/res/layout/reminder_poput.xml
+++ b/app/src/main/res/layout/reminder_poput.xml
@@ -24,15 +24,16 @@
                     app:layout_constraintTop_toTopOf="parent"
                     android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toTopOf="@+id/button" android:id="@+id/timePicker"
-                    android:layout_marginEnd="16dp" android:layout_marginStart="16dp"/>
+                    app:layout_constraintBottom_toTopOf="@+id/btnTimer" android:id="@+id/Settings_timePicker"
+                    android:layout_marginEnd="16dp" android:layout_marginStart="16dp"
+                    app:layout_constraintHorizontal_bias="0.0"/>
             <Button
                     android:text="SET Reminder"
                     android:layout_width="144dp"
                     android:layout_height="60dp"
-                    android:id="@+id/button" app:layout_constraintStart_toStartOf="parent"
+                    android:id="@+id/btnTimer" app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="108dp" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/timePicker"
+                    app:layout_constraintTop_toBottomOf="@+id/Settings_timePicker"
                     app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="108dp"
                     app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                     android:layout_marginBottom="24dp"/>
