--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="ten">10dp</dimen>
     <dimen name="twenty">20dp</dimen>
+    <dimen name="twenty_five">25dp</dimen>
 </resources>
