--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,16 +3,15 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/nav_graph"
-            app:startDestination="@id/HomeFragment">
+            app:startDestination="@id/homeFragment">
 
     <fragment
-            android:id="@+id/HomeFragment"
+            android:id="@+id/homeFragment"
             android:name="com.example.galacticore.HomeFragment"
-            android:label="@string/Home_fragment_label"
+            android:label="@string/home_fragment_label"
             tools:layout="@layout/fragment_home">
-
         <action
-                android:id="@+id/action_FirstFragment_to_addTransactionFragment"
+                android:id="@+id/action_homeFragment_to_addTransactionFragment"
                 app:destination="@id/addTransactionFragment" />
     </fragment>
 
@@ -21,9 +20,8 @@
             android:name="com.example.galacticore.AddTransactionFragment"
             android:label="@string/add_transaction_fragment_label"
             tools:layout="@layout/fragment_add_transaction">
-
         <action
-                android:id="@+id/action_addTransactionFragment_to_HomeFragment"
-                app:destination="@id/HomeFragment" />
+                android:id="@+id/action_addTransactionFragment_to_homeFragment"
+                app:destination="@id/homeFragment" />
     </fragment>
 </navigation>
