--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,16 +26,16 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:menu="@menu/bottom_nav_menu" />
-
+            app:menu="@menu/bottom_nav_menu"
+            android:background="@color/navigationBar_grey">
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/newTransaction_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
             android:contentDescription="@string/add_new_transaction"
-            app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
+            app:srcCompat="@android:drawable/ic_input_add"
             app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@android:drawable/ic_input_add" />
+            android:layout_marginEnd="176dp" app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
