--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -62,25 +62,27 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginStart="104dp"
-                android:layout_marginTop="36dp"
+                android:layout_marginTop="25dp"
                 android:rotation="90"/>
 
         <!-- Goal Progress Bar -->
         <ProgressBar
                 style="@android:style/Widget.ProgressBar.Horizontal"
                 android:layout_width="350dp"
-                android:layout_height="wrap_content"
+                android:layout_height="15dp"
                 android:id="@+id/current_goal_bar"
                 android:progress="0"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="120dp"/>
+                android:layout_marginTop="120dp"
+                android:progressTint="#06E3FF"
+                android:progressBackgroundTint="#B100A7"/>
 
         <!-- Main Content Card -->
         <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="650dp"
+                android:layout_height="680dp"
                 app:cardCornerRadius="30dp"
                 app:cardBackgroundColor="@color/backDropMain_darkGrey"
                 android:id="@+id/cardView_mainBackdrop"
@@ -162,7 +164,7 @@
                                 android:textSize="18sp"
                                 android:layout_height="wrap_content"
                                 android:id="@+id/textView_monthlyIncome"
-                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintStart_toStartOf="@+id/textView_monthlyBalance"
                                 app:layout_constraintTop_toBottomOf="@+id/textView_monthlyBalance"
                                 android:layout_marginTop="16dp"/>
 
@@ -173,7 +175,7 @@
                                 android:textSize="18sp"
                                 android:layout_height="wrap_content"
                                 android:id="@+id/textView_monthlyIncomeNumber"
-                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintEnd_toEndOf="@+id/textView_monthlyBalanceNumber"
                                 app:layout_constraintTop_toTopOf="@+id/textView_monthlyIncome"/>
 
                         <TextView
@@ -183,7 +185,7 @@
                                 android:textSize="18sp"
                                 android:layout_height="wrap_content"
                                 android:id="@+id/textView_Expenses"
-                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintStart_toStartOf="@+id/textView_monthlyIncome"
                                 app:layout_constraintTop_toBottomOf="@+id/textView_monthlyIncome"
                                 android:layout_marginTop="8dp"/>
 
@@ -194,7 +196,7 @@
                                 android:textSize="18sp"
                                 android:layout_height="wrap_content"
                                 android:id="@+id/textView_monthlyExpensesNumber"
-                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintEnd_toEndOf="@+id/textView_monthlyIncomeNumber"
                                 app:layout_constraintTop_toTopOf="@+id/textView_Expenses"/>
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -203,9 +205,9 @@
                 <!-- Daily Info and Transactions List -->
                 <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
-                        android:layout_height="330dp"
+                        android:layout_height="310dp"
                         app:cardCornerRadius="15dp"
-                        app:cardElevation="11dp"
+                        app:cardElevation="5dp"
                         app:layout_constraintTop_toBottomOf="@+id/cardView_monthlyInfoBackdrop"
                         android:layout_marginTop="16dp"
                         android:id="@+id/cardView_dailyInfoBackdrop" app:layout_constraintStart_toStartOf="parent"
@@ -243,7 +245,9 @@
                                 android:id="@+id/listView_transaction"
                                 app:layout_constraintTop_toBottomOf="@+id/textView_viewDate"
                                 app:layout_constraintBottom_toBottomOf="parent"
-                                android:layout_marginTop="16dp"/>
+                                android:layout_marginTop="16dp"
+                                app:layout_constraintStart_toStartOf="@+id/textView_viewDate"
+                                app:layout_constraintEnd_toEndOf="@+id/textView3"/>
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.cardview.widget.CardView>
