Added setting page and outline for category

--- a/app/src/main/res/values/Values.xml
+++ b/app/src/main/res/values/Values.xml
@@ -25,6 +25,7 @@
 
     <color name="pink">#FF4081</color>
     <color name="light_grey">#DDDDDD</color>
+    <color name="fake_boarder">#A9A9A9</color>
 
 
     <!-- Theme colors -->
