--- a/app/src/main/res/drawable/rounded_corner_box.xml
+++ b/app/src/main/res/drawable/rounded_corner_box.xml
@@ -2,8 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle"
 >
-    <corners android:radius="24dp"/>
-    <stroke android:width="3dp" android:color="@color/white"/>
+    <corners android:radius="3dp"/>
+    <stroke android:width="1dp"
+            android:color="@color/fake_boarder"/>
 
 
 </shape>
