--- a/app/src/main/res/layout/fragment_add_transaction.xml
+++ b/app/src/main/res/layout/fragment_add_transaction.xml
@@ -22,6 +22,16 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
+        <ImageView
+                android:src="@drawable/rounded_corner_box"
+                android:layout_width="match_parent"
+                android:layout_height="53dp"
+                android:id="@+id/category_boarder"
+                android:layout_weight="1"
+                app:layout_constraintTop_toBottomOf="@+id/dateInputLayout"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="16dp"/>
         <com.google.android.material.button.MaterialButtonToggleGroup
                 android:id="@+id/toggleGroup"
                 android:layout_width="0dp"
@@ -82,6 +92,11 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent">
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" android:layout_weight="1">
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
             <TextView
                     android:id="@+id/textViewCategory"
                     android:layout_width="match_parent"
