Added setting button and updated the nav_graph

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,19 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-
-
-<!--    <item android:title="Account"-->
-<!--            android:icon="@drawable/bnt_account"-->
-<!--            android:id="@+id/account"/>-->
-
         <item
-                android:id="@+id/homeFragment"
+                android:id="@+id/bnt_home"
                 android:icon="@drawable/bnt_home"
                 android:title="@string/home" />
         <!-- Add other menu items as needed -->
 
-<!--    <item android:title="Setting"-->
-<!--            android:icon="@drawable/bnt_setting"-->
-<!--            android:id="@+id/setting"/>-->
+    <item android:title="Setting"
+            android:icon="@drawable/bnt_setting"
+            android:id="@+id/bnt_setting"/>
 </menu>
