--- a/app/src/main/res/layout/reminder_poput.xml
+++ b/app/src/main/res/layout/reminder_poput.xml
@@ -16,7 +16,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent">
 
             <TimePicker
                     android:layout_width="360dp"
