--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,6 +6,18 @@
             app:startDestination="@id/loginFragment">
 
     <fragment
+            android:id="@+id/loginFragment"
+            android:name="com.example.galacticore.LoginFragment"
+            android:label="Login"
+            tools:layout="@layout/fragment_login">
+        <action
+                android:id="@+id/action_loginFragment_to_homeFragment"
+                app:destination="@id/bnt_home"
+                app:popUpTo="@id/loginFragment"
+                app:popUpToInclusive="true" />
+    </fragment>
+
+    <fragment
             android:id="@+id/bnt_home"
             android:name="com.example.galacticore.HomeFragment"
             android:label="Home"
@@ -16,7 +28,9 @@
         <action
                 android:id="@+id/action_homeFragment_to_transactionDetailFragment"
                 app:destination="@id/transactionDetailFragment" />
-        <action android:id="@+id/action_bnt_home_to_settingFragment" app:destination="@id/settingFragment"/>
+        <action
+                android:id="@+id/action_bnt_home_to_settingFragment"
+                app:destination="@id/settingFragment"/>
     </fragment>
 
     <fragment
@@ -42,22 +56,16 @@
     </fragment>
 
     <fragment
-            android:id="@+id/loginFragment"
-            android:name="com.example.galacticore.LoginFragment"
-            android:label="Login"
-            tools:layout="@layout/fragment_login">
+            android:id="@+id/settingFragment"
+            android:name="com.example.galacticore.SettingFragment"
+            android:label="Settings"
+            tools:layout="@layout/fragment_setting">
         <action
-                android:id="@+id/action_loginFragment_to_homeFragment"
-                app:destination="@id/bnt_home"
-                app:popUpTo="@id/loginFragment"
-                app:popUpToInclusive="true" />
-    </fragment>
-    <fragment android:id="@+id/settingFragment" android:name="com.example.galacticore.SettingFragment"
-              android:label="fragment_setting" tools:layout="@layout/fragment_setting">
-        <action android:id="@+id/action_settingFragment_to_bnt_home" app:destination="@id/bnt_home"/>
-        <action android:id="@+id/action_settingFragment_to_transactionDetailFragment"
-                app:destination="@id/transactionDetailFragment"/>
-        <action android:id="@+id/action_settingFragment_to_loginFragment" app:destination="@id/loginFragment"/>
+                android:id="@+id/action_settingFragment_to_bnt_home"
+                app:destination="@id/bnt_home"/>
+        <action
+                android:id="@+id/action_settingFragment_to_loginFragment"
+                app:destination="@id/loginFragment"/>
     </fragment>
 
 </navigation>
