--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
+      tools:ignore="ExtraText">
 
         <item
                 android:id="@+id/bnt_home"
                 android:icon="@drawable/bnt_home"
                 android:title="@string/home" />
-        <!-- Add other menu items as needed -->
+
 
     <item android:title="Setting"
             android:icon="@drawable/bnt_setting"
             android:id="@+id/bnt_setting"/>
+
+    <item
+            android:id="@+id/gameFragment"
+            android:icon="@drawable/moon_icon"
+            android:title="game"
+    />
 </menu>
